syntax = "proto3";
package logWritter;
option go_package = "proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";


service LogWritter {
    rpc SaveLog(LogData) returns (google.protobuf.Empty) {};
}


message LogData{
    string collectionName = 1;
    LogType logType =2;
    google.protobuf.Any instrument = 3;
}

enum LogType {
    LOG_TYPE_VERBOSE = 0;
    LOG_TYPE_INFORMATION = 1;
    LOG_TYPE_WARNING = 2;
    LOG_TYPE_ERROR = 3;

}

